src/objects/E_F_Service_Review__c.object
<CustomObject>
    <description>Used to record E&amp;F-client service review meetings</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the Service Review took or will take place</description>
        <inlineHelpText>Select the Service Review date</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_F_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related E&amp;F Asset</description>
        <label>E&amp;F Asset</label>
        <referenceTo>E_F_Asset__c</referenceTo>
        <relationshipLabel>E&amp;F Service Reviews</relationshipLabel>
        <relationshipName>E_F_Service_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the Service Review meeting</description>
        <inlineHelpText>Select the place for the Service Review</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GVA</fullName>
                </value>
                <value>
                    <fullName>YMQ</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Owner__c</fullName>
        <description>Contains the names of 3 review owners: &quot;Arnaud Francq&quot;, &quot;Koen Karsbergen&quot; and &quot;Claudia falconi&quot;</description>
        <label>Review Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arnaud Francq</fullName>
                </value>
                <value>
                    <fullName>Koen Karsbergen</fullName>
                </value>
                <value>
                    <fullName>Claudia falconi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E&amp;F Service Review</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>E&amp;F Service Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E&amp;F Service Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>